# reidle

./: app.py  pyproject.toml  words.csv
