[tool.poetry]
name = "reidle"
version = "0.1.0"
description = ""
authors = ["Jack Reilly <jack@vianova.io>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
